--- a/docs/2.운영체제/4.CPU와프로세스간통신/3.공유자원과임계영역.md
+++ b/docs/2.운영체제/4.CPU와프로세스간통신/3.공유자원과임계영역.md
@@ -111,11 +111,11 @@ void consumer() {
     printf("Data: %d\n", data);  // 3. 데이터 읽기
 }
 
-컴파일러 최적화 후 (가능한 결과):
+//컴파일러 최적화 후 (가능한 결과):
 void producer() {
     flag = 1;         // ⚠️ 순서 바뀜!
     data = 42;        // 컴파일러가 성능상 이유로 재배열
-}`
+}
 ```
 
 ```
@@ -910,3 +910,338 @@ public class MonitorExample {
     }
 }
 ```
+
+
+### 대충 넘어가는 교착 상태
+
+### 데드락의 4가지 필요 조건
+
+데드락이 발생하려면 다음 4가지 조건이 **모두** 충족되어야 합니다:
+
+**1. 비선점(Non-preemption)**: **어떤 자원에 대해 프로세스나 스레드가 점유한 후 그 점유한 자원을 계속 가지고 있는 상태**
+
+```
+화장실 데드락 시나리오
+
+스레드 A: 화장실 문 잠그고 들어감 → 휴지 없음을 발견 → 휴지 대기
+스레드 B: 휴지 가지고 있음 → 화장실 들어가려 함 → 문 잠겨서 대기
+
+┌─────────────────────────────────────────────────────┐
+│  🚽 화장실 (임계구역)                               │
+│  ┌─────────────────────────────────────────────┐   │
+│  │ 👨 스레드 A                                 │   │
+│  │ "휴지가 없어... 누가 가져다줄 때까지 기다려"  │   │
+│  │ 🔒 문은 계속 잠긴 상태 (비선점)             │   │
+│  └─────────────────────────────────────────────┘   │
+└─────────────────────────────────────────────────────┘
+                    ↑ 들어가려 함
+┌─────────────────────────────────────────────────────┐
+│  👩 스레드 B                                        │
+│  🧻 휴지 들고 있음                                  │
+│  "화장실 문이 잠겨있어... 언제 열릴지 모르겠네"      │
+└─────────────────────────────────────────────────────┘
+
+결과: 무한 대기!
+```
+
+**2. 점유와 대기(Hold and Wait)**: **특정 공유 자원에 대해서 한 스레드가 점유하면 다른 스레드는 사용하기까지 대기한다**
+
+**3. 원형 대기(Circular Wait)**: 스레드들이 서로의 자원을 원형으로 기다리는 상태
+
+**4. 상호 배제(Mutual Exclusion)**: 한 번에 하나의 스레드만 자원 사용 가능
+
+### 데드락의 정의와 현상
+
+**데드락(Deadlock, 교착상태)이란 컴퓨터 시스템에서 둘 이상의 프로세스(또는 스레드)가 서로가 가지고 있는 자원을 요청하며 무한 대기 상태에 빠지는 현상**입니다.
+
+```java
+// 전형적인 데드락 예시
+public class DeadlockExample {
+    private final Object lock1 = new Object();
+    private final Object lock2 = new Object();
+    
+    public void method1() {
+        synchronized (lock1) {          // 스레드 A가 lock1 획득
+            System.out.println("Thread A: lock1 획득");
+            
+            try { Thread.sleep(100); } catch (InterruptedException e) {}
+            
+            synchronized (lock2) {      // 스레드 A가 lock2 요청 (대기)
+                System.out.println("Thread A: lock2도 획득!");
+            }
+        }
+    }
+    
+    public void method2() {
+        synchronized (lock2) {          // 스레드 B가 lock2 획득
+            System.out.println("Thread B: lock2 획득");
+            
+            try { Thread.sleep(100); } catch (InterruptedException e) {}
+            
+            synchronized (lock1) {      // 스레드 B가 lock1 요청 (대기)
+                System.out.println("Thread B: lock1도 획득!");
+            }
+        }
+    }
+}
+
+// 실행 결과:// Thread A: lock1 획득// Thread B: lock2 획득// ... (무한 대기)
+```
+
+**프로세스의 스레드 1,2가 하나의 공유 자원에 대해 접근할 때 경쟁 조건이 발생하면서 이때 이 자원에 대해 락을 걸고 임계영역을 수행한다. 이때 점유한 스레드가 락을 해제하지 않는다면 대기하는 스레드들은 무한적 대기 상태에 빠지게 됩니다**.
+
+### 데드락 감지와 해결 방법
+
+**이러한 데드락을 방지하기 위해서는 공유 자원에 다른 하나의 스레드가 접근하는 스레드 1,2에 대한 상태를 감시해서 스레드들이 지속적으로 wait 상태에 빠지는 것이 있는지, 얼마나 오래 대기 상태에 있는지를 감시합니다**.
+
+```java
+// 데드락 감지 및 해결 예시
+public class DeadlockDetector {
+    private final Map<Thread, List<Object>> heldLocks = new ConcurrentHashMap<>();
+    private final Map<Thread, Object> waitingFor = new ConcurrentHashMap<>();
+    private final ScheduledExecutorService detector = 
+        Executors.newScheduledThreadPool(1);
+    
+    public DeadlockDetector() {
+        // 5초마다 데드락 검사
+        detector.scheduleAtFixedRate(this::detectDeadlock, 5, 5, TimeUnit.SECONDS);
+    }
+    
+    private void detectDeadlock() {
+        System.out.println("=== 데드락 검사 시작 ===");
+        
+        for (Thread thread : heldLocks.keySet()) {
+            if (thread.getState() == Thread.State.BLOCKED) {
+                long waitTime = getWaitTime(thread);
+                
+                System.out.println(thread.getName() + " - 대기 시간: " + 
+                                 waitTime + "ms, 상태: " + thread.getState());
+                
+                // 10초 이상 대기 중인 스레드 발견
+                if (waitTime > 10000) {
+                    System.out.println("⚠️ 데드락 의심: " + thread.getName());
+                    handleDeadlock(thread);
+                }
+            }
+        }
+    }
+    
+    private void handleDeadlock(Thread suspectedThread) {
+        System.out.println("🚨 데드락 해결 시도: " + suspectedThread.getName() + " 종료");
+        
+        // 메모리 덤프 생성 (실제로는 더 복잡한 구현 필요)
+        generateMemoryDump(suspectedThread);
+        
+        // 스레드 강제 종료
+        suspectedThread.interrupt();
+        
+        // 새로운 스레드로 재시작
+        restartThread(suspectedThread);
+    }
+    
+    private void generateMemoryDump(Thread thread) {
+        System.out.println("📊 메모리 덤프 생성: " + thread.getName());
+        
+        // 스택 트레이스 출력
+        StackTraceElement[] stackTrace = thread.getStackTrace();
+        System.out.println("Call Stack 분석:");
+        for (StackTraceElement element : stackTrace) {
+            System.out.println("  " + element.toString());
+        }
+        
+        // 어떤 락을 기다리고 있는지 분석
+        Object waitingLock = waitingFor.get(thread);
+        if (waitingLock != null) {
+            System.out.println("대기 중인 락: " + waitingLock.getClass().getSimpleName());
+        }
+    }
+}
+```
+
+**이런 상황이 발생할 때 가장 간단한 방법은 대기 상태에 빠져있는 스레드들을 제거하면 됩니다**. **종료시킨 스레드를 감시하는 스레드가 재실행시킴으로써 해결할 수 있습니다**. **그래서 종료된 스레드의 메모리 Dump를 통해서 스레드가 가지고 있는 Call Stack을 확인하여 스레드가 어떤 작업을 하다가 대기 상태에 빠지게 됐는지 분석하면 됩니다**.
+
+### 메모리 덤프(Memory Dump)란?
+
+**메모리 덤프는 특정 시점에서 프로세스나 스레드의 메모리 상태를 파일로 저장한 것**입니다. 여기에는 다음 정보들이 포함됩니다:
+
+📊 ``메모리 덤프 구성 요소
+1. 스택 프레임 (Stack Frames)
+   • 함수 호출 순서
+   • 지역 변수 값들
+   • 매개변수 정보
+
+2. 레지스터 상태
+   • CPU 레지스터 값들
+   • 프로그램 카운터(PC)
+   • 스택 포인터(SP)
+
+3. 힙 메모리 상태
+   • 동적 할당된 객체들
+   • 객체 간 참조 관계
+
+4. 스레드 상태 정보
+   • 현재 실행 상태
+   • 대기 중인 락 정보
+   • 스레드 ID와 우선순위
+
+### 프로세스 레벨의 데드락
+
+**이러한 교착 상태를 스레드 레벨에서 프로세스 레벨까지 생각해보면** 더 복잡한 상황이 발생합니다.
+
+```
+🖨️ 프로세스 레벨 데드락 시나리오
+
+     P1, P2, P3 (프로세스들)
+        ↓
+User   File (파일 자원)
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+Kernel Mode (시스템 호출)
+        ↓
+S/W    Device Driver
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+H/W    Printer (물리적 프린터)
+```
+
+**만약에 위 그림처럼 프로세스 1번이 파일을 통해 커널 모드로 진입하여 프린터라는 자원을 사용하려고 할 때 프로세스 1이 파일을 open하는 순간 해당 파일에 락을 걸게 됩니다**. **이 말은 즉 다른 프로세스 2,3번은 접근이 불가능하다는 의미입니다**.
+
+```java
+// 프로세스 레벨 데드락 시뮬레이션
+public class ProcessLevelDeadlock {
+    // 커널 오브젝트 시뮬레이션
+    private final Object fileResource = new Object();    // 파일 자원
+    private final Object printerResource = new Object(); // 프린터 자원
+    
+    // 프로세스 1 시뮬레이션
+    public void process1() {
+        try {
+            synchronized (fileResource) {  // 파일 락 획득
+                System.out.println("프로세스 1: 파일 오픈 완료");
+                
+                // 100장 프린트 작업 시작
+                synchronized (printerResource) {
+                    System.out.println("프로세스 1: 프린터 획득, 100장 인쇄 시작");
+                    
+                    for (int i = 1; i <= 100; i++) {
+                        System.out.println("프린트 중... " + i + "/100");
+                        Thread.sleep(100);  // 인쇄 시간
+                        
+                        // 50장 인쇄 후 강제 중단 시뮬레이션
+                        if (i == 50) {
+                            System.out.println("💥 프로세스 1: 50장 인쇄 후 비정상 종료!");
+                            // 프로세스가 비정상 종료되면서 락을 해제하지 못함
+                            throw new RuntimeException("Process crashed!");
+                        }
+                    }
+                }
+            }
+        } catch (Exception e) {
+            System.out.println("프로세스 1 오류: " + e.getMessage());
+            // 비정상 종료로 인해 락이 해제되지 않음!
+        }
+    }
+    
+    // 프로세스 2,3 시뮬레이션 (대기 상태)
+    public void process2() {
+        System.out.println("프로세스 2: 프린터 사용 대기 중...");
+        synchronized (printerResource) {  // 무한 대기!
+            System.out.println("프로세스 2: 프린터 획득 (실행되지 않음)");
+        }
+    }
+}
+```
+
+**이때 프로세스 1이 100장을 프린트하고 있다가 50장을 프린트하는 시점에서 프로세스 1이 중단되었다면 이 프린터를 사용하려는 다른 프로세스들이 대기 상태에 빠지게 됩니다**. **즉, 사용하지 못하는 자원이 됩니다**.
+
+### 커널 오브젝트 동기화와 타임아웃
+
+**그래서 이러한 커널 오브젝트에 대한 동기화를 할 때 보통 뮤텍스를 사용하고 점유하려는 프로세스들은 진입 시에 타임을 명시합니다**.
+
+```java
+// 타임아웃을 이용한 데드락 방지
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.ReentrantLock;
+
+public class TimeoutBasedDeadlockPrevention {
+    private final ReentrantLock fileResource = new ReentrantLock();
+    private final ReentrantLock printerResource = new ReentrantLock();
+    
+    public void safeProcess1() {
+        boolean fileAcquired = false;
+        boolean printerAcquired = false;
+        
+        try {
+            // 파일 자원 획득 시도 (최대 5초 대기)
+            fileAcquired = fileResource.tryLock(5, TimeUnit.SECONDS);
+            if (!fileAcquired) {
+                System.out.println("프로세스 1: 파일 락 획득 실패 (타임아웃)");
+                return;
+            }
+            
+            System.out.println("프로세스 1: 파일 락 획득 성공");
+            
+            // 프린터 자원 획득 시도 (최대 3초 대기)
+            printerAcquired = printerResource.tryLock(3, TimeUnit.SECONDS);
+            if (!printerAcquired) {
+                System.out.println("프로세스 1: 프린터 락 획득 실패 (타임아웃)");
+                return;
+            }
+            
+            System.out.println("프로세스 1: 프린터 락 획득 성공");
+            
+            // 실제 인쇄 작업
+            performPrintJob();
+            
+        } catch (InterruptedException e) {
+            System.out.println("프로세스 1: 인터럽트로 인한 종료");
+            Thread.currentThread().interrupt();
+        } finally {
+            // 반드시 획득한 락들을 해제 (역순으로)
+            if (printerAcquired) {
+                printerResource.unlock();
+                System.out.println("프로세스 1: 프린터 락 해제");
+            }
+            if (fileAcquired) {
+                fileResource.unlock();
+                System.out.println("프로세스 1: 파일 락 해제");
+            }
+        }
+    }
+    
+    private void performPrintJob() throws InterruptedException {
+        for (int i = 1; i <= 100; i++) {
+            System.out.println("안전한 인쇄: " + i + "/100");
+            Thread.sleep(50);
+            
+            // 주기적으로 인터럽트 체크
+            if (Thread.currentThread().isInterrupted()) {
+                System.out.println("인쇄 작업 중단 요청 받음");
+                throw new InterruptedException("Print job interrupted");
+            }
+        }
+    }
+}
+```
+
+### 데드락 방지 전략 종합
+
+🛡️ 데드락 방지 전략
+
+1️⃣ 예방 (Prevention)
+• 4가지 조건 중 하나라도 차단
+• 자원 순서 지정 (Lock Ordering)
+• 타임아웃 설정
+
+2️⃣ 회피 (Avoidance)  
+• 은행가 알고리즘
+• 안전한 상태 유지
+
+3️⃣ 탐지 (Detection)
+• 주기적 데드락 검사
+• 자원 할당 그래프 분석
+
+4️⃣ 복구 (Recovery)
+• 프로세스/스레드 강제 종료
+• 자원 선점 및 재할당
+• 체크포인트 복구
+
+**실제 운영 환경에서는 타임아웃 기반의 예방 전략이 가장 실용적**이며, **메모리 덤프를 통한 사후 분석**으로 데드락의 근본 원인을 파악하여 시스템을 개선하는 것이 일반적인 접근법입니다.
