feat(메모리관리기법): 페이징 기법

--- a/docs/2.운영체제/5.메모리관리기법/5.가상메모리.md
+++ b/docs/2.운영체제/5.메모리관리기법/5.가상메모리.md
@@ -358,4 +358,307 @@ public class VirtualMemoryDemo {
 - 메모리 관리 정책 변화
 ```
 
-메모하신 **가상 메모리 개념**은 현대 컴퓨터 시스템의 **핵심 기반 기술**로, **프로그램의 이식성, 보안성, 효율성**을 동시에 보장하는 중요한 추상화 계층입니다!
+**가상 메모리 개념**은 현대 컴퓨터 시스템의 **핵심 기반 기술**로, **프로그램의 이식성, 보안성, 효율성**을 동시에 보장하는 중요한 추상화 계층입니다!
+
+## 가상 메모리의 선형 구조
+
+**VMS(32bit) 기준 4GB 배열인 것입니다. 쉽게 말해서 character가 있는 배열인데 여기에 사이즈가 42억9천만... 하는 배열입니다**. **가상 메모리라는 것 자체는 논리적으로 봤을 때 완벽하게 선형 구조입니다**. **그래서 이 배열 안에 우리가 알고 있는 stack, heap 그 외 정적 영역, 코드 등 모든 게 이 배열 안에 속해 있는 것입니다**.
+
+## 페이지와 프레임의 매핑 관계
+
+**가상 메모리는 프로세스마다 독립적으로 존재하며 위에 물리 주소는 실제 RAM을 말합니다**.
+
+**이때 프로세스 1 ~ n 개가 존재했을 때 각 프로세스의 가상주소 100번이 실제 가리키는 물리 주소는 각각 다릅니다**.
+
+```
+🔄 페이지-프레임 매핑 구조
+
+프로세스 A의 가상 메모리:           물리 메모리 (실제 RAM):
+┌─────────────────────────┐         ┌─────────────────────────┐
+│ 페이지 0 (0x0000-0x0FFF)│ ────┐   │ 프레임 0 (비어있음)     │
+│ 페이지 1 (0x1000-0x1FFF)│ ──┐ │   │ 프레임 1 (프로세스 B)   │
+│ 페이지 2 (0x2000-0x2FFF)│ ┐ │ └──►│ 프레임 2 (프로세스 A)   │
+│ 페이지 3 (0x3000-0x3FFF)│ │ └────►│ 프레임 3 (프로세스 A)   │
+│ 페이지 4 (0x4000-0x4FFF)│ └──────►│ 프레임 4 (프로세스 A)   │
+│ 페이지 5 (0x5000-0x5FFF)│ INVALID │ 프레임 5 (프로세스 C)   │
+└─────────────────────────┘         └─────────────────────────┘
+
+페이지 테이블 (프로세스 A):
+┌──────────┬────────────┬──────────┐
+│ 페이지 # │ 프레임 #   │ 상태     │
+├──────────┼────────────┼──────────┤
+│    0     │     2      │ Present  │
+│    1     │     3      │ Present  │  
+│    2     │     4      │ Present  │
+│    3     │     1      │ Present  │
+│    4     │  Invalid   │ Swapped  │
+│    5     │  Invalid   │ Not Used │
+└──────────┴────────────┴──────────┘
+
+특징:
+- 가상 페이지 순서 ≠ 물리 프레임 순서
+- 여러 프로세스가 같은 물리 메모리 공유 가능
+- Invalid 페이지는 디스크에 저장되거나 미사용
+```
+
+## 페이지 단위화의 중요성
+
+**페이지란 뭘까? 라고 한다면 32bit 체제에서는 0부터 시작해서 0xFFFFFFFF만큼의 주소를 가질 것입니다**.
+
+**윈도우 운영체제 기준 페이지라 하면 기본적으로 4KB 단위로 끊어서 처리합니다**. **이때 물리 주소에서 프레임이든 세그먼트든 어떤 특정한 단위로 메모리를 끊어서 관리하는 것인데 특별한 경우가 없던 페이지의 사이즈와 프레임의 사이즈 크기를 맞춰서 관리합니다**. **즉 프레임 또한 동일하게 4KB 크기를 가진다는 것입니다**.
+
+### **왜 단위화해서 관리하는 것이 중요한가?**
+
+```
+🧩 페이지 단위화의 핵심 이유
+
+1️⃣ 메모리 관리 효율성:
+┌─────────────────────────────────────────────────────┐
+│  단위화 없이 관리한다면:                            │
+│  • 1바이트씩 개별 관리 → 4GB = 40억 개 엔트리       │
+│  • 메모리 테이블 크기: 40억 × 8바이트 = 32GB        │
+│  • 메모리보다 관리 구조가 더 큼!                    │
+│                                                     │
+│  4KB 페이지로 관리한다면:                           │
+│  • 4GB ÷ 4KB = 100만 개 페이지                      │
+│  • 페이지 테이블 크기: 100만 × 8바이트 = 8MB        │
+│  • 관리 가능한 크기로 축소!                         │
+└─────────────────────────────────────────────────────┘
+
+2️⃣ 하드웨어 최적화:
+┌─────────────────────────────────────────────────────┐
+│  • CPU 캐시 라인과 맞춤 (보통 64바이트 단위)        │
+│  • 메모리 접근 패턴 최적화 (지역성 활용)            │
+│  • MMU(Memory Management Unit) 하드웨어 지원        │
+│  • TLB(Translation Lookaside Buffer) 효율성         │
+└─────────────────────────────────────────────────────┘
+
+3️⃣ 외부 단편화 해결:
+┌─────────────────────────────────────────────────────┐
+│  가변 크기 할당의 문제:                             │
+│  [프로세스A 200KB][빈공간 50KB][프로세스B 300KB]   │
+│  → 새로운 100KB 프로세스 할당 불가                  │
+│                                                     │
+│  고정 페이지 크기 할당:                             │
+│  [페이지][페이지][빈페이지][페이지][페이지]         │
+│  → 빈 페이지에 언제든 새 프로세스 할당 가능         │
+└─────────────────────────────────────────────────────┘
+
+4️⃣ 스왑 효율성:
+┌─────────────────────────────────────────────────────┐
+│  • 디스크와 메모리 간 이동이 페이지 단위로 일어남   │
+│  • 4KB는 디스크 섹터 크기와 잘 맞음                 │
+│  • 부분적 스왑 가능 (프로세스 전체가 아닌)          │
+│  • 지역성 원리에 의해 필요한 부분만 로드            │
+└─────────────────────────────────────────────────────┘
+```
+
+## 아파트 단지 비유
+
+**예를 들어 VMS가 아파트 단지라고 했을 때 페이지는 몇동 몇호고 생각하면 됩니다**. **그래서 처음 시작점인 0번 주소(절대적인 기준)를 기준으로 얼마만큼 떨어졌는지 상대적인 위치를 말하게 됩니다**.
+
+**그래서 이 절대적인 기준을 기점으로 상대적인 위치를 영어로 offset 또는 distance라고 부릅니다**.
+
+```
+🏢 아파트 단지 비유로 이해하는 페이징
+
+가상 메모리 = 거대한 아파트 단지 (4GB)
+┌─────────────────────────────────────────────────────┐
+│  아파트 단지 "가상 메모리 타워"                     │
+│                                                     │
+│  📍 101동 (페이지 0): 0x0000 ~ 0x0FFF              │
+│     • 101호: 0x0000 (distance = 0)                 │
+│     • 102호: 0x0001 (distance = 1)                 │
+│     • ...                                           │
+│     • 1024호: 0x0FFF (distance = 4095)             │
+│                                                     │
+│  📍 102동 (페이지 1): 0x1000 ~ 0x1FFF              │  
+│     • 101호: 0x1000 (distance = 0)                 │
+│     • 102호: 0x1001 (distance = 1)                 │
+│     • ...                                           │
+│                                                     │
+│  📍 103동 (페이지 2): 0x2000 ~ 0x2FFF              │
+│  ...                                                │
+└─────────────────────────────────────────────────────┘
+
+주소 계산 예시:
+- 가상주소 0x1234를 찾으려면?
+- 페이지 번호 = 0x1234 ÷ 0x1000 = 1 (102동)
+- 오프셋 = 0x1234 % 0x1000 = 0x234 (564호)
+- 결과: "102동 564호를 찾아가세요!"
+```
+
+## 정형화된 주소 구조
+
+**페이징 기법의 정형화된 주소: 가상 주소는 VA= <P,D>입니다**
+
+- **VA는 Virtual Address**
+- **P는 페이지 번호, D는 Distance입니다**
+
+**페이지 번호를 가지고 페이지를 찾은 다음에 그 페이지를 기준으로 얼마만큼 떨어져 있다라는 의미입니다**.
+
+**실제 가상메모리 주소를 가지고 페이지 테이블과 연결 실제 물리적인 주소 프레임을 찾아서 프레임을 기준으로 한다면 PA = <F,D>**
+
+- **PA는 물리적 주소**
+- **F는 프레임, D는 Distance입니다**
+
+```
+🔢 주소 변환 과정 (Address Translation)
+
+32bit 시스템에서 4KB 페이지 기준:
+┌─────────────────────────────────────────────────────┐
+│  가상 주소 (32bit):                                 │
+│  ┌──────────────────┬──────────────────────────────┐ │
+│  │  페이지 번호 (P) │     오프셋 (D)              │ │
+│  │     20 bit       │      12 bit                  │ │
+│  └──────────────────┴──────────────────────────────┘ │
+│        │                      │                      │
+│        │                      └─────────────────┐    │
+│        ▼                                        │    │
+│  ┌──────────────┐                               │    │  
+│  │ 페이지 테이블 │                               │    │
+│  │    검색      │                               │    │
+│  └──────────────┘                               │    │
+│        │                                        │    │
+│        ▼                                        │    │
+│  ┌──────────────────────────────────────────────┼────┤ │
+│  │  프레임 번호 (F) │     오프셋 (D)            │    │ │
+│  │     20 bit       │      12 bit (동일)        │    │ │
+│  └──────────────────┴──────────────────────────────┘ │
+│                                                     │
+│  물리 주소 (32bit)                                  │
+└─────────────────────────────────────────────────────┘
+
+주소 변환 예시:
+가상주소 0x12345678 변환:
+- 페이지 번호: 0x12345678 >> 12 = 0x12345
+- 오프셋: 0x12345678 & 0xFFF = 0x678
+- 페이지 테이블에서 페이지 0x12345 → 프레임 0xABCDE 매핑
+- 물리주소: (0xABCDE << 12) | 0x678 = 0xABCDE678
+```
+
+```java
+// 주소 변환 시뮬레이션
+public class AddressTranslation {
+    private static final int PAGE_SIZE = 4096; // 4KB
+    private static final int OFFSET_BITS = 12;  // 4KB = 2^12
+    private static final int OFFSET_MASK = 0xFFF; // 12bit 마스크
+    
+    static class PageTable {
+        private Map<Integer, Integer> pageToFrame; // 페이지 → 프레임 매핑
+        private Map<Integer, Boolean> validity;    // 페이지 유효성
+        
+        public PageTable() {
+            this.pageToFrame = new HashMap<>();
+            this.validity = new HashMap<>();
+        }
+        
+        public void mapPage(int pageNumber, int frameNumber) {
+            pageToFrame.put(pageNumber, frameNumber);
+            validity.put(pageNumber, true);
+        }
+        
+        public void invalidatePage(int pageNumber) {
+            validity.put(pageNumber, false);
+        }
+        
+        public int translateAddress(int virtualAddress) {
+            // VA = <P, D> 분해
+            int pageNumber = virtualAddress >>> OFFSET_BITS;  // 상위 20bit
+            int offset = virtualAddress & OFFSET_MASK;        // 하위 12bit
+            
+            System.out.printf("🔍 가상주소 0x%08X 분석:\n", virtualAddress);
+            System.out.printf("   페이지 번호(P): 0x%05X\n", pageNumber);
+            System.out.printf("   오프셋(D): 0x%03X (%d bytes)\n", offset, offset);
+            
+            // 페이지 유효성 검사
+            if (!validity.getOrDefault(pageNumber, false)) {
+                System.out.println("   ❌ 페이지 폴트 발생! (Invalid Page)");
+                return -1; // 페이지 폴트
+            }
+            
+            // 프레임 번호 조회
+            Integer frameNumber = pageToFrame.get(pageNumber);
+            if (frameNumber == null) {
+                System.out.println("   ❌ 페이지 폴트 발생! (Page Not Found)");
+                return -1; // 페이지 폴트
+            }
+            
+            // PA = <F, D> 조합
+            int physicalAddress = (frameNumber << OFFSET_BITS) | offset;
+            
+            System.out.printf("   프레임 번호(F): 0x%05X\n", frameNumber);
+            System.out.printf("   ✅ 물리주소: 0x%08X\n", physicalAddress);
+            
+            return physicalAddress;
+        }
+    }
+    
+    public static void main(String[] args) {
+        PageTable pageTable = new PageTable();
+        
+        System.out.println("📋 페이지 테이블 설정:");
+        pageTable.mapPage(0x12345, 0xABCDE);  // 페이지 → 프레임 매핑
+        pageTable.mapPage(0x67890, 0x11111);
+        pageTable.mapPage(0xAAAAA, 0x22222);
+        pageTable.invalidatePage(0xBBBBB);     // Invalid 페이지
+        
+        System.out.println("\n🔄 주소 변환 테스트:");
+        
+        // 정상 변환
+        pageTable.translateAddress(0x12345678);
+        System.out.println();
+        
+        // 다른 페이지
+        pageTable.translateAddress(0x67890ABC);
+        System.out.println();
+        
+        // Invalid 페이지 접근
+        pageTable.translateAddress(0xBBBBB123);
+        System.out.println();
+        
+        // 존재하지 않는 페이지
+        pageTable.translateAddress(0xCCCCC456);
+    }
+}
+```
+
+```
+Invalid 페이지 처리
+그리고 실제 페이지를 찾았는데 위에처럼 invalid일 때에 대한 설명이 필요합니다.
+⚠️ Invalid 페이지 상황과 처리
+
+Invalid 페이지가 발생하는 경우들:
+┌─────────────────────────────────────────────────────┐
+│  1️⃣ 스왑 아웃된 페이지:                             │
+│     • 메모리 부족으로 디스크로 이동됨               │
+│     • 필요 시 다시 메모리로 로드 (스왑 인)          │
+│                                                     │
+│  2️⃣ 아직 할당되지 않은 페이지:                      │
+│     • 프로세스가 아직 접근하지 않은 영역            │
+│     • 필요 시 새로운 물리 메모리 할당               │
+│                                                     │
+│  3️⃣ 권한 위반:                                     │
+│     • 읽기 전용 페이지에 쓰기 시도                  │
+│     • 실행 불가 페이지에서 코드 실행 시도           │
+│                                                     │
+│  4️⃣ 해제된 페이지:                                 │
+│     • free()나 delete로 해제된 메모리 영역          │
+│     • 접근 시 세그멘테이션 폴트 발생                │
+└─────────────────────────────────────────────────────┘
+
+페이지 폴트 처리 과정:
+┌─────────────────────────────────────────────────────┐
+│  1. CPU가 Invalid 페이지 접근 감지                  │
+│  2. 하드웨어 인터럽트 발생 (페이지 폴트)            │
+│  3. 운영체제 페이지 폴트 핸들러 실행                │
+│  4. 원인 분석:                                      │
+│     → 스왑된 페이지면 디스크에서 로드               │
+│     → 미할당 페이지면 새 메모리 할당                │
+│     → 권한 위반이면 프로세스 종료                   │
+│  5. 페이지 테이블 업데이트                          │
+│  6. 프로세스 실행 재개                              │
+└─────────────────────────────────────────────────────┘
+```
+
+**페이징 기법**은 현대 가상 메모리 시스템의 **핵심 메커니즘**으로, **효율적인 메모리 관리와 프로세스 보호**를 동시에 제공하는 중요한 기술입니다! 특히 **VA=<P,D>, PA=<F,D>의 정형화된 구조**는 하드웨어 MMU가 빠른 주소 변환을 수행할 수 있게 하는 핵심 원리입니다.
